[package]
name = "kekhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.9"
rand = "0.8.4"